src/test/ui/static/static-lifetime-bound.stderr
warning: unnecessary lifetime parameter `'a`
  --> $DIR/static-lifetime-bound.rs:1:6
   |
LL | fn f<'a: 'static>(_: &'a i32) {}
   |      ^^^^^^^^^^^
   |
   = help: you can use the `'static` lifetime directly, in place of `'a`

error[E0597]: `x` does not live long enough
  --> $DIR/static-lifetime-bound.rs:5:7
   |
LL |     f(&x);
   |     --^^-
   |     | |
   |     | borrowed value does not live long enough
   |     argument requires that `x` is borrowed for `'static`
LL | }
   | - `x` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
